# calculadora-pensiones

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.py  entrypoint.sh  main.py  pyproject.toml  requirements-build.txt  requirements.txt  setup.py
.github/workflows/: docker-build-deploy.yml
app/: main.py
app/knowledge_base/pension/: age_specific.txt  general_advice.txt
app/scripts/: update_knowledge_base.py
app/templates/: plantilla.html
app/utils/: email_sender.py  email_template.py  knowledge_base_loader.py
calculator/: pension.c  pension.py  pension_core.c  pension_core.py
knowledge_base/pension/: gap_strategies.txt
utils/: email_sender.py  email_template.py  pdf_generator.py  pension_advisor.py  testing_model.py
