[project]
name = "pensionfi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=0.29.24",
    "fastapi>=0.68.0,<0.69.0",
    "numpy>=1.21.0",
    "pydantic>=1.8.0,<2.0.0",
    "setuptools>=57.0.0",
    "uvicorn>=0.15.0,<0.16.0",
    "wheel>=0.37.0",
]
